Add SAT RAWDATA Verbal export
